fixed alignment of nav bar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,5 +12,6 @@
 }
 
 .hoverAnimation {
-    @apply hover:bg-black hover:bg-opacity-10 xl:p-3;
+    @apply hover:cursor-pointer hover:bg-black hover:bg-opacity-10 rounded-full xl:p-3 w-11 h-11
+    xl:w-auto xl:h-auto;
 }
